<resources>
    <string name="app_name">MenuProject</string>
    <string name="button_sms">SMS</string>
    <string name="button_phone">Phone</string>
    <string name="button_web">Web</string>
    <string name="button_map">Map</string>
    <string name="button_share">Share</string>
    <string name="button_new_activity">New Activity</string>
    <string name="hello_mehraj_meah">Hello Mehraj Meah</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="help_text">Help</string>
</resources>